implemented app initializing

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,5 +1,7 @@
 ping.test.executor.pool.size = 10
-response.test.executor.pool.size = 5
+http.status.test.executor.pool.size = 5
+ping.failure.retry.interval = 20
+ping.success.retry.interval = 60
 ping.attepmts.limit = 5
 ping.timeout = 1000
-response.timeout = 2000
+http.status.timeout = 2000
