implemented random mock ping and http status results

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,7 +1,9 @@
 ping.test.executor.pool.size = 10
 http.status.test.executor.pool.size = 5
-ping.failure.retry.interval = 20
-ping.success.retry.interval = 60
+#ping.failure.retry.interval = 20
+#ping.success.retry.interval = 60
+ping.failure.retry.interval = 2
+ping.success.retry.interval = 5
 ping.attepmts.limit = 5
 ping.timeout = 1000
 http.status.timeout = 2000
